Add runtime commands