@@ -34,3 +34,9 @@ tasks.withType(Test).configureEach {
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.add('-Xlint:deprecation')
 }
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-native-access=ALL-UNNAMED'
+}
+tasks.withType(Javadoc).configureEach {
+    (options as StandardJavadocDocletOptions).addStringOption('Xdoclint:all,-missing', '-quiet')
+}
